--- a/V_2/login.html
+++ b/V_2/login.html
@@ -8,6 +8,7 @@
 <body>
 
     <div class="form-container">
+        <a href="index.html" class="close-btn">&#10006;</a>
         <h2>Login</h2>
         <form action="#" method="post">
             <div class="form-group">
