--- a/V_2/Nos-setup.html
+++ b/V_2/Nos-setup.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <script src="cart.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Nos-setups</title>
 
@@ -35,7 +36,7 @@
                 </div>
                 <div class="shop">                  
                     <a href="#">
-                        <img src="market.png" alt="image panier">
+                        <img src="market.png" id="openCartBtn" alt="image panier">
                     </a>
                 </div> 
             <aside id="searchbartop">
@@ -62,6 +63,16 @@
             <img src="#" alt="setup-1">
         </section>
     </main>
+
+    <div id="cart" class="cart">
+        <!-- Contenu du panier -->
+        <span class="close" id="closeCartBtn">&times;</span>
+        <h2>Mon Panier</h2>
+        <ul>
+            <!-- Liste des articles dans le panier -->
+        </ul>
+    </div>
+
 
 
 </body>
