--- a/V_2/register.html
+++ b/V_2/register.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="form-container">
-        <a href="index.html" class="close-bt">&#10006;</a>
+        <a href="index.html" class="close-btn">&#10006;</a>
         <h2>Register</h2>
         <form action="#" method="post">
             <div class="form-group">
