--- a/V_2/index.html
+++ b/V_2/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
-    <title>RentPC-Acceuil</title>
+    <title>RentPC-Home</title>
     <script src="cart.js"></script>
     <script src="common.js"></script>
 </head>
