--- a/V_2/Nos-setup.html
+++ b/V_2/Nos-setup.html
@@ -37,7 +37,7 @@
                         <span id="cartItemCount">0</span>
                     </a>
                     <div class="go-to-cart">
-                        <a href="shop.html" id="goToCartBtn">Go to Cart</a>
+                        <a href="#" id="goToCartBtn">Go to Cart</a>
                     </div>
                     <div class="clear-cart">
                         <a href="#" id="clearCartBtn">Clear Cart</a>
@@ -88,7 +88,7 @@
         </section>
     
         <section class="liste-setups">
-            <a href="#" data-color="black" data-res="75" data-proc="ryzen" data-gpu="nvidia" alt="#">
+            <a href="#" id="article1" data-color="black" data-res="75" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup1">
                     <div class="setup1_pic">
                         <img src="Pics/setup_1.jpeg">
@@ -97,7 +97,7 @@
                         <h2>Full Setup</h2>
                         <p>Breve description du produit.</p>
                         <p>Price: €2000.00</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="2000.00">  
+                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="2000.00" data-pics="setup_1.jpeg">
                     </div>
                 </div>
             </a>
@@ -110,7 +110,7 @@
                         <h2>Full Setup</h2>
                         <p>Breve description du produit.</p>
                         <p>Price: €2000.00</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="2000.00"> 
+                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="2000.00" data-pics="setup2.jpeg"> 
                     </div>
                 </div>
             </a>
@@ -229,6 +229,5 @@
         </ul>
         <p id="totalPrice">Total: $0.00</p>
     </div>
-
 </body>
 </html>
