--- a/V_2/shop.html
+++ b/V_2/shop.html
@@ -6,8 +6,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
-    <script src="cart.js"></script>
-    <script src="common.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop</title>
 </head>
@@ -30,13 +28,13 @@
                 <input type="text" id="adresse" name="adresse" required>
 
                 <div class="city">
-                    <label for="nom">City :</label>
-                    <input type="text" id="nom" name="nom" required>
+                    <label for="city">City :</label>
+                    <input type="text" id="city" name="city" required>
                 </div>
             
                 <div class="city">
-                    <label for="prenom">ZIP Code :</label>
-                    <input type="text" id="prenom" name="prenom" required>
+                    <label for="zip">ZIP Code :</label>
+                    <input type="text" id="zip" name="zip" required>
                 </div>
     
                 <label for="email">Email :</label>
@@ -66,5 +64,8 @@
             </ul>
         </section>
     </div>
+    <script src="cart.js"></script>
+    <script src="common.js"></script>
+    <script src="shop.js"></script>
 </body>
 </html>
