Css filtres + fin des pages produits

--- a/V_2/Nos-setup.html
+++ b/V_2/Nos-setup.html
@@ -55,7 +55,7 @@
     </header>
     <main>
         <section class="filter-section">
-            <h3>Color</h3>
+            <h3 class="color">Color</h3>
             <label for="whiteCheckbox" id="whiteLabel" class="label-checkbox">White</label>
             <input type="checkbox" id="whiteCheckbox" class="filter-checkbox" data-type="color" data-value="white">
     
