--- a/V_2/index.html
+++ b/V_2/index.html
@@ -25,8 +25,8 @@
             <div id="pages_container">
                 <a href="Nos-setup.html">Our Setups</a>
                 <a href="Nos-PCs.html">Our PCs</a>
-                <a href="#">Our monitors</a>
-                <a href="#">Our Outputs/Inputs</a>
+                <a href="Our-monitors.html">Our monitors</a>
+                <a href="Our-inputs.html">Our Outputs/Inputs</a>
                 <a href="#">Contact us</a>
             </div>
             <div id="user_container">
@@ -69,7 +69,7 @@
                     <img src="Pics/PC.jpg" alt="Nos PC">
                     <h2>Our PCs</h2> 
                 </a>
-                <a href="">
+                <a href="Our-monitors.html">
                     <img src="Pics/ecran.jpg" alt="Nos écrans">
                     <h2>Our monitors</h2>
                 </a>
