Outputs / monitors filters checked

--- a/V_2/Our-inputs.html
+++ b/V_2/Our-inputs.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="cart.js"></script>
-    <script src="common.js"></script>
+    <script src="outputs.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Our-PCs</title>
 
@@ -65,17 +65,17 @@
         </section>
         <section class="filter-section">
             <h3 class="res">Resolution</h3>
-            <label for="firstCheckbox" id="firstLabel" class="label-checkbox">75HZ</label>
-            <input type="checkbox" id="firstCheckbox" class="filter-checkbox" data-type="res" data-value="75">
+            <label for="firstCheckbox" id="firstLabel" class="label-checkbox">Mouse</label>
+            <input type="checkbox" id="firstCheckbox" class="filter-checkbox" data-type="out" data-value="mouse">
     
-            <label for="secondCheckbox" id="secondLabel" class="label-checkbox">165HZ</label>
-            <input type="checkbox" id="secondCheckbox" class="filter-checkbox" data-type="res" data-value="165">
+            <label for="secondCheckbox" id="secondLabel" class="label-checkbox">Keyboards</label>
+            <input type="checkbox" id="secondCheckbox" class="filter-checkbox" data-type="out" data-value="key">
     
-            <label for="thirdCheckbox" id="thirdLabel" class="label-checkbox">240HZ</label>
-            <input type="checkbox" id="thirdCheckbox" class="filter-checkbox" data-type="res" data-value="240">
+            <label for="thirdCheckbox" id="thirdLabel" class="label-checkbox">Headset</label>
+            <input type="checkbox" id="thirdCheckbox" class="filter-checkbox" data-type="out" data-value="head">
         </section>
         <section class="liste-setups">
-            <a href="#" data-color="black" alt="#">
+            <a href="#" data-out="mouse" alt="#">
                 <div class="setup1">
                     <div class="setup1_pic">
                         <img src="Pics/mouse1.jpeg" alt="setup-1">
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="white" alt="#">
+            <a href="#" data-out="mouse" alt="#">
                 <div class="setup2">
                     <div class="setup2_pic">
                         <img src="Pics/mouse2.jpeg" alt="setup-2">
@@ -101,7 +101,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="black" alt="#">
+            <a href="#" data-out="mouse" alt="#">
                 <div class="setup3">
                     <div class="setup3_pic">
                         <img src="Pics/mouse3.jpeg" alt="setup-3">
@@ -114,7 +114,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="white" alt="#">
+            <a href="#" data-out="mouse" alt="#">
                 <div class="setup4">
                     <div class="setup4_pic">
                         <img src="Pics/mouse4.jpeg" alt="setup-4">
@@ -127,7 +127,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="black" alt="#">
+            <a href="#" data-out="key" alt="#">
                 <div class="setup5">
                     <div class="setup5_pic">
                         <img src="Pics/keyboard1.webp" alt="setup-5">
@@ -140,7 +140,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="white" alt="#">
+            <a href="#" data-out="key" alt="#">
                 <div class="setup6">
                     <div class="setup6_pic">
                         <img src="Pics/keyboard2.jpeg" alt="setup-6">
@@ -153,7 +153,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="black" alt="#">
+            <a href="#" data-out="key" alt="#">
                 <div class="setup7">
                     <div class="setup7_pic">
                         <img src="Pics/keyboard3.jpeg" alt="setup-7">
@@ -166,7 +166,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="white" alt="#">
+            <a href="#" data-out="head" alt="#">
                 <div class="setup8">
                     <div class="setup8_pic">
                         <img src="Pics/headset1.jpeg" alt="setup-8">
@@ -179,7 +179,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="black" alt="#">
+            <a href="#" data-out="head" alt="#">
                 <div class="setup9">
                     <div class="setup9_pic">
                         <img src="Pics/headset2.jpeg" alt="setup-9">
@@ -192,7 +192,7 @@
                     </div>
                 </div>
             </a>
-            <a href="#" data-color="white" alt="#">
+            <a href="#" data-out="head" alt="#">
                 <div class="setup10">
                     <div class="setup10_pic">
                         <img src="Pics/headset3.jpeg" alt="setup-10">
