Footer + contact us et message de remerciement

--- a/V_2/Nos-PCs.html
+++ b/V_2/Nos-PCs.html
@@ -30,7 +30,7 @@
             <a href="Nos-PCs.html">Our PCs</a>
             <a href="Our-monitors.html">Our monitors</a>
             <a href="Our-inputs.html">Our Outputs/Inputs</a>
-            <a href="#">Contact us</a>
+            <a href="contact.html">Contact us</a>
               <div class="login">
                 <a href="register.html">
                     <img src="Pics/login.png" alt="Image login">
@@ -64,8 +64,8 @@
                 <h2>PCs :</h2>
             </div>
         </section>
-        <section class="filter-section">
-            <div class="filter-div">
+        <div class="filter-div"></div>
+            <section class="filter-section">
                 <h3 class="color">Color</h3>
                 <label for="whiteCheckbox" id="whiteLabel" class="label-checkbox">White</label>
                 <input type="checkbox" id="whiteCheckbox" class="filter-checkbox" data-type="color" data-value="white">
@@ -86,8 +86,9 @@
         
                 <label for="amdCheckbox" id="amdLabel" class="label-checkbox">AMD</label>
                 <input type="checkbox" id="amdCheckbox" class="filter-checkbox" data-type="gpu" data-value="amd">
-            </div>
-        </section>
+            </section>
+        </div>
+        
 
         <section class="liste-setups">
             <a href="#" id="article1" data-color="black" data-proc="ryzen" data-gpu="nvidia" alt="#">
@@ -231,7 +232,31 @@
         </ul>
         <p id="totalPrice">Total: $0.00</p>
     </div>
-
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h2>Contact Us</h2>
+                <ul>
+                    <li>Adresse : 123 Rue PC, Ville</li>
+                    <li>Téléphone : (123) 456-7890</li>
+                    <li>Email : info@RentPC.com</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Our Services</h2>
+                <ul>
+                    <li>PC gaming rental</li>
+                    <li>Gaming screen rental</li>
+                    <li>Setup gaming rental</li>
+                    <li>Gaming equipment rental</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Follow Us</h2>
+            </div>
+        </div>
+        <p>&copy; 2023 RentPC. All rights reserved.</p>
+    </footer>
 
 
 </body>
