--- a/V_2/index.html
+++ b/V_2/index.html
@@ -27,7 +27,7 @@
                 <a href="Nos-PCs.html">Our PCs</a>
                 <a href="Our-monitors.html">Our monitors</a>
                 <a href="Our-inputs.html">Our Outputs/Inputs</a>
-                <a href="#">Contact us</a>
+                <a href="contact.html">Contact us</a>
             </div>
             <div id="user_container">
                 <div class="login">
@@ -96,7 +96,31 @@
         </div>
         
     </main>
-
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">
+                <h2>Contact Us</h2>
+                <ul>
+                    <li>Adresse : 123 Rue PC, Ville</li>
+                    <li>Téléphone : (123) 456-7890</li>
+                    <li>Email : info@RentPC.com</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Our Services</h2>
+                <ul>
+                    <li>PC gaming rental</li>
+                    <li>Gaming screen rental</li>
+                    <li>Setup gaming rental</li>
+                    <li>Gaming equipment rental</li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h2>Follow Us</h2>
+            </div>
+        </div>
+        <p>&copy; 2023 RentPC. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
