--- a/V_2/shop.html
+++ b/V_2/shop.html
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <section class="form-section">
-            <form action="/process_order" method="post">
+            <form action="command.html" method="post">
                 <div class="name-container">
                     <label for="nom">Last Name :</label>
                     <input type="text" id="nom" name="nom" required>
