--- a/V_2/HTML/Nos-PCs.html
+++ b/V_2/HTML/Nos-PCs.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="Nos-PCs.css"/>
+    <link rel="stylesheet" href="../CSS/style.css"/>
+    <link rel="stylesheet" href="../CSS/Nos-PCs.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="cart.js"></script>
-    <script src="common.js"></script>
+    <script src="../Java/cart.js"></script>
+    <script src="../Java/common.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Our-PCs</title>
 
@@ -22,27 +22,27 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
-                <img src="Pics/RENTPC.svg" alt="logo">
+                <a href="../HTML/index.html">
+                <img src="../Pics/RENTPC.svg" alt="logo">
                 </a>
             </div>
-            <a href="Nos-setup.html">Our Setups</a>
-            <a href="Nos-PCs.html">Our PCs</a>
-            <a href="Our-monitors.html">Our monitors</a>
-            <a href="Our-inputs.html">Our Outputs/Inputs</a>
-            <a href="contact.html">Contact us</a>
+            <a href="../HTML/Nos-setup.html">Our Setups</a>
+            <a href="../HTML/Nos-PCs.html">Our PCs</a>
+            <a href="../HTML/Our-monitors.html">Our monitors</a>
+            <a href="../HTML/Our-inputs.html">Our Outputs/Inputs</a>
+            <a href="../HTML/contact.html">Contact us</a>
               <div class="login">
-                <a href="register.html">
-                    <img src="Pics/login.png" alt="Image login">
+                <a href="../HTML/register.html">
+                    <img src="../Pics/login.png" alt="Image login">
                 </a>
                 </div>
                 <div class="shop">                  
                     <a href="#">
-                        <img src="Pics/market.png" id="openCartBtn" alt="image panier">
+                        <img src="../Pics/market.png" id="openCartBtn" alt="image panier">
                         <span id="cartItemCount">0</span>
                     </a>
                     <div class="go-to-cart">
-                        <a href="shop.html" id="goToCartBtn">Go to Cart</a>
+                        <a href="../HTML/shop.html" id="goToCartBtn">Go to Cart</a>
                     </div>
                     <div class="clear-cart">
                         <a href="#" id="clearCartBtn">Clear Cart</a>
@@ -50,7 +50,7 @@
                 </div>
             <aside id="searchbartop">
             <input type="checkbox" id="searchbartopbtn" />
-            <label for="searchbartopbtn"> <img src="Pics/loupe.png"></label>
+            <label for="searchbartopbtn"> <img src="../Pics/loupe.png"></label>
                 <form method="post" action="">
                 <div><input type="text" value="" /></div>
                  <button type="submit">OK</button>
@@ -94,130 +94,130 @@
             <a href="#" id="article1" data-color="black" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup1">
                     <div class="setup1_pic">
-                        <img src="Pics/Pc1.webp" alt="setup-1">
+                        <img src="../Pics/Pc1.webp" alt="setup-1">
                     </div>
                     <div class="setup1_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 7 5700x - Msi GeForce RTX 4070 VENTUS 12Gb - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €124.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="124.99">  
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="124.99">  
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup2">
                     <div class="setup2_pic">
-                        <img src="Pics/pc2.jpeg" alt="setup-2">
+                        <img src="../Pics/pc2.jpeg" alt="setup-2">
                     </div>
                     <div class="setup2_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 5 5600x - ZOTAC GeForce RTX 3060 Dual 12Gb - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €85.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="85.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="85.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-proc="ryzen" alt="#">
                 <div class="setup3">
                     <div class="setup3_pic">
-                        <img src="Pics/pc3.WEBP" alt="setup-3">
+                        <img src="../Pics/pc3.WEBP" alt="setup-3">
                     </div>
                     <div class="setup3_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 5 5600G - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €38.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="38.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="38.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white"  data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup4">
                     <div class="setup4_pic">
-                        <img src="Pics/pc4.jpeg" alt="setup-4">
+                        <img src="../Pics/pc4.jpeg" alt="setup-4">
                     </div>
                     <div class="setup4_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 7 5700x - ZOTAC GeForce RTX 3060 Dual 12Gb - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €102.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="102.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="102.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-proc="intel" data-gpu="nvidia" alt="#">
                 <div class="setup5">
                     <div class="setup5_pic">
-                        <img src="Pics/pc5.jpeg" alt="setup-5">
+                        <img src="../Pics/pc5.jpeg" alt="setup-5">
                     </div>
                     <div class="setup5_infos">
                         <h2>Full setup</h2>
                         <p>Intel core i5 12400F - MSI VENTUS RTX 3060 2X 12Gb OC - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €81.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="81.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="81.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup6">
                     <div class="setup6_pic">
-                        <img src="Pics/pc6.webp" alt="setup-6">
+                        <img src="../Pics/pc6.webp" alt="setup-6">
                     </div>
                     <div class="setup6_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 5 5500 - MSI VENTUS RTX 3060 2X 12Gb OC - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €75.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="75.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="75.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-proc="intel" data-gpu="amd" alt="#">
                 <div class="setup7">
                     <div class="setup7_pic">
-                        <img src="Pics/pc7.jpeg" alt="setup-7">
+                        <img src="../Pics/pc7.jpeg" alt="setup-7">
                     </div>
                     <div class="setup7_infos">
                         <h2>Full Setup</h2>
                         <p>Intel core I3 12100F - MSI Radeon VENTUS RX6500 XT 2X 12Gb - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €52.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="52.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="52.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup8">
                     <div class="setup8_pic">
-                        <img src="Pics/pc8.jpeg" alt="setup-8">
+                        <img src="../Pics/pc8.jpeg" alt="setup-8">
                     </div>
                     <div class="setup8_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 5 5500 - Gigabyte RTX 4060 AERO 8Gb white edition - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €88.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="88.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="88.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup9">
                     <div class="setup9_pic">
-                        <img src="Pics/pc9.WEBP" alt="setup-9">
+                        <img src="../Pics/pc9.WEBP" alt="setup-9">
                     </div>
                     <div class="setup9_infos">
                         <h2>Full Setup</h2>
                         <p>AMD Ryzen 3 4100 - MSI Gaming GeForce GTX 1650 4GB - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €39.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="39.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="39.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-proc="intel" data-gpu="nvidia" alt="#">
                 <div class="setup10">
                     <div class="setup10_pic">
-                        <img src="Pics/pc10.jpeg" alt="setup-10">
+                        <img src="../Pics/pc10.jpeg" alt="setup-10">
                     </div>
                     <div class="setup10_infos">
                         <h2>Full setup</h2>
                         <p>Intel core I3 12100F - Zotac GeForce RTX 3050 Twin Edge 8GB - RAM Corsair 16gb vengeance LPX (2x8) 3200mhz</p>
                         <p>Price: €68.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="68.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="68.99"> 
                     </div>
                 </div>
             </a>
