--- a/V_2/HTML/contact.html
+++ b/V_2/HTML/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="contact.css"/>
+    <link rel="stylesheet" href="../CSS/contact.css"/>
     <title>Contact Us - RentPC</title>
 </head>
 <body>
@@ -13,8 +13,8 @@
     </header>
 
     <section>
-        <a href="index.html" class="close-btn">&#10006;</a>
-        <form action="bye.html" method="post">
+        <a href="../HTML/index.html" class="close-btn">&#10006;</a>
+        <form action="../HTML/bye.html" method="post">
             <label for="nom">Name :</label>
             <input type="text" id="nom" name="nom" required>
 
