--- a/V_2/HTML/login.html
+++ b/V_2/HTML/login.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../CSS/login.css" />
 </head>
 <body>
 
     <div class="form-container">
-        <a href="index.html" class="close-btn">&#10006;</a>
+        <a href="../HTML/index.html" class="close-btn">&#10006;</a>
         <h2>Login</h2>
         <form action="#" method="post">
             <div class="form-group">
@@ -23,7 +23,7 @@
         </form>
         <div class="register">
             <h4>Don't have an account ?</h4>
-            <a href="register.html">Register</a>
+            <a href="../HTML/register.html">Register</a>
         </div>
     </div>
 
