--- a/V_2/HTML/register.html
+++ b/V_2/HTML/register.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.css" />
+    <link rel="stylesheet" href="../CSS/login.css" />
 </head>
 <body>
 
     <div class="form-container">
-        <a href="index.html" class="close-btn">&#10006;</a>
+        <a href="../HTML/index.html" class="close-btn">&#10006;</a>
         <h2>Register</h2>
         <form action="#" method="post">
             <div class="form-group">
@@ -27,7 +27,7 @@
         </form>
         <div class="login">
             <h4>Already have an account ?</h4>
-            <a href="login.html">Login</a>
+            <a href="../HTML/login.html">Login</a>
         </div>
     </div>
 
