--- a/V_2/HTML/shop.html
+++ b/V_2/HTML/shop.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="shop.css"/>
+    <link rel="stylesheet" href="../CSS/shop.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body>
     <div class="container">
         <section class="form-section">
-            <form action="command.html" method="post">
+            <form action="../HTML/command.html" method="post">
                 <div class="name-container">
                     <label for="nom">Last Name :</label>
                     <input type="text" id="nom" name="nom" required>
@@ -64,8 +64,8 @@
             </ul>
         </section>
     </div>
-    <script src="cart.js"></script>
-    <script src="common.js"></script>
-    <script src="shop.js"></script>
+    <script src="../Java/cart.js"></script>
+    <script src="../Java/common.js"></script>
+    <script src="../Java/shop.js"></script>
 </body>
 </html>
