--- a/V_2/HTML/Nos-setup.html
+++ b/V_2/HTML/Nos-setup.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="Nos-setup.css"/>
+    <link rel="stylesheet" href="../CSS/style.css"/>
+    <link rel="stylesheet" href="../CSS/Nos-setup.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="cart.js"></script>
-    <script src="common.js"></script>
+    <script src="../Java/cart.js"></script>
+    <script src="../Java/common.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Our-setups</title>
 
@@ -22,27 +22,27 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
-                <img src="Pics/RENTPC.svg" alt="logo">
+                <a href="../HTML/index.html">
+                <img src="../Pics/RENTPC.svg" alt="logo">
                 </a>
             </div>
-            <a href="Nos-setup.html">Our Setups</a>
-            <a href="Nos-PCs.html">Our PCs</a>
-            <a href="Our-monitors.html">Our monitors</a>
-            <a href="Our-inputs.html">Our Outputs/Inputs</a>
-            <a href="contact.html">Contact us</a>
+            <a href="../HTML/Nos-setup.html">Our Setups</a>
+            <a href="../HTML/Nos-PCs.html">Our PCs</a>
+            <a href="../HTML/Our-monitors.html">Our monitors</a>
+            <a href="../HTML/Our-inputs.html">Our Outputs/Inputs</a>
+            <a href="../HTML/contact.html">Contact us</a>
               <div class="login">
-                <a href="register.html">
-                    <img src="Pics/login.png" alt="Image login">
+                <a href="../HTML/register.html">
+                    <img src="../Pics/login.png" alt="Image login">
                 </a>
                 </div>
                 <div class="shop">                  
                     <a href="#">
-                        <img src="Pics/market.png" id="openCartBtn" alt="image panier">
+                        <img src="../Pics/market.png" id="openCartBtn" alt="image panier">
                         <span id="cartItemCount">0</span>
                     </a>
                     <div class="go-to-cart">
-                        <a href="shop.html" id="goToCartBtn">Go to Cart</a>
+                        <a href="../HTML/shop.html" id="goToCartBtn">Go to Cart</a>
                     </div>
                     <div class="clear-cart">
                         <a href="#" id="clearCartBtn">Clear Cart</a>
@@ -50,7 +50,7 @@
                 </div>
             <aside id="searchbartop">
             <input type="checkbox" id="searchbartopbtn" />
-            <label for="searchbartopbtn"> <img src="Pics/loupe.png"></label>
+            <label for="searchbartopbtn"> <img src="../Pics/loupe.png"></label>
                 <form method="post" action="">
                 <div><input type="text" value="" /></div>
                  <button type="submit">OK</button>
@@ -105,130 +105,130 @@
             <a href="#" id="article1" data-color="black" data-res="165" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup1">
                     <div class="setup1_pic">
-                        <img src="Pics/setup_1.jpeg">
+                        <img src="../Pics/setup_1.jpeg">
                     </div>
                     <div class="setup1_infos">
                         <h2>AWD-IT M100R </h2>
                         <p>AMD Ryzen 5700X NVIDIA RTX 4070 12GB 27" QHD 165Hz Monitor Desktop PC Gaming Package</p>
                         <p>Price: €145.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="145.99">  
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="145.99">  
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-res="165" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup2">
                     <div class="setup2_pic">
-                        <img src="Pics/setup2.jpeg">
+                        <img src="../Pics/setup2.jpeg">
                     </div>
                     <div class="setup2_infos">
                         <h2>X= Infinity White </h2>
                         <p>AMD Ryzen 5 5600X 6 Core, Nvidia RTX 3060 12GB, 27" 165Hz Monitor Package For Gaming</p>
                         <p>Price: €106.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="106.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="106.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-res="75" data-proc="ryzen" alt="#">
                 <div class="setup3">
                     <div class="setup3_pic">
-                        <img src="Pics/setup3.jpeg">
+                        <img src="../Pics/setup3.jpeg">
                     </div>
                     <div class="setup3_infos">
                         <h2>AWD-IT </h2>
                         <p>AMD Ryzen 5 5600G Volt with AMD VEGA Graphics Desktop PC Monitor Package</p>
                         <p>Price: €47.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="47.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="47.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-res="165" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup4">
                     <div class="setup4_pic">
-                        <img src="Pics/setup4.jpg">
+                        <img src="../Pics/setup4.jpg">
                     </div>
                     <div class="setup4_infos">
                         <h2>AWD-IT X= CUBE White </h2>
                         <p>AMD Ryzen 7 5700X NVIDIA RTX 4060 8GB Windows 11 27" 180Hz Monitor Desktop PC Gaming Package</p>
                         <p>Price: €116.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="116.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="116.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-res="240" data-proc="intel" data-gpu="nvidia" alt="#">
                 <div class="setup5">
                     <div class="setup5_pic">
-                        <img src="Pics/setup5.jpeg">
+                        <img src="../Pics/setup5.jpeg">
                     </div>
                     <div class="setup5_infos">
                         <h2>AWD-IT X= Infinity </h2>
                         <p> Intel i5 12400F 6 Core, Nvidia RTX 3060 12GB, 27" 240Hz Curved Monitor Package</p>
                         <p>Price: €98.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="98.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="98.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-res="165" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup6">
                     <div class="setup6_pic">
-                        <img src="Pics/setup6.jpeg">
+                        <img src="../Pics/setup6.jpeg">
                     </div>
                     <div class="setup6_infos">
                         <h2>AWD-IT 3000D RGB White</h2>
                         <p>AMD Ryzen 5500, NVIDIA RTX 3060 12GB, Windows 11, 27" 180Hz Monitor Next Day Gaming PC Package</p>
                         <p>Price: €89.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="89.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="89.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-res="75" data-proc="intel" data-gpu="amd" alt="#">
                 <div class="setup7">
                     <div class="setup7_pic">
-                        <img src="Pics/setup7.jpeg">
+                        <img src="../Pics/setup7.jpeg">
                     </div>
                     <div class="setup7_infos">
                         <h2>AWD-IT Air Mesh </h2>
                         <p>Intel i3 12100F Quad Core Radeon RX 6500 XT 4GB PC Monitor Package</p>
                         <p>Price: €60.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="60.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="60.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-res="75" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup8">
                     <div class="setup8_pic">
-                        <img src="Pics/setup8.jpeg">
+                        <img src="../Pics/setup8.jpeg">
                     </div>
                     <div class="setup8_infos">
                         <h2>X= Mini CUBE </h2>
                         <p>AMD Ryzen 5 5500 6 Core, Nvidia RTX 4060 8GB, 24" Curved Monitor Package</p>
                         <p>Price: €105.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="105.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="105.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="black" data-res="75" data-proc="ryzen" data-gpu="nvidia" alt="#">
                 <div class="setup9">
                     <div class="setup9_pic">
-                        <img src="Pics/setup9.jpeg">
+                        <img src="../Pics/setup9.jpeg">
                     </div>
                     <div class="setup9_infos">
                         <h2>AWD-IT </h2>
                         <p>AMD Ryzen QUAD Core GTX 1650 4GB 22" LED Monitor PC Package</p>
                         <p>Price: €47.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="47.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="47.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-color="white" data-res="75" data-proc="intel" data-gpu="nvidia" alt="#">
                 <div class="setup10">
                     <div class="setup10_pic">
-                        <img src="Pics/setup10.jpeg">
+                        <img src="../Pics/setup10.jpeg">
                     </div>
                     <div class="setup10_infos">
                         <h2>AWD-IT Air Mesh</h2>
                         <p>Intel i3 12100F Quad Core NVIDIA RTX 3050 8GB PC Monitor Package</p>
                         <p>Price: €76.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="76.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="76.99"> 
                     </div>
                 </div>
             </a>
