--- a/V_2/HTML/Our-inputs.html
+++ b/V_2/HTML/Our-inputs.html
@@ -4,12 +4,12 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
-    <link rel="stylesheet" href="inputs.css"/>
+    <link rel="stylesheet" href="../CSS/style.css"/>
+    <link rel="stylesheet" href="../CSS/inputs.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="cart.js"></script>
-    <script src="outputs.js"></script>
+    <script src="../Java/cart.js"></script>
+    <script src="../Java/outputs.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Our-PCs</title>
 
@@ -22,27 +22,27 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
-                <img src="Pics/RENTPC.svg" alt="logo">
+                <a href="../HTML/index.html">
+                <img src="../Pics/RENTPC.svg" alt="logo">
                 </a>
             </div>
-            <a href="Nos-setup.html">Our Setups</a>
-            <a href="Nos-PCs.html">Our PCs</a>
-            <a href="Our-monitors.html">Our monitors</a>
-            <a href="Our-inputs.html">Our Outputs/Inputs</a>
-            <a href="contact.html">Contact us</a>
+            <a href="../HTML/Nos-setup.html">Our Setups</a>
+            <a href="../HTML/Nos-PCs.html">Our PCs</a>
+            <a href="../HTML/Our-monitors.html">Our monitors</a>
+            <a href="../HTML/Our-inputs.html">Our Outputs/Inputs</a>
+            <a href="../HTML/contact.html">Contact us</a>
               <div class="login">
-                <a href="register.html">
-                    <img src="Pics/login.png" alt="Image login">
+                <a href="../HTML/register.html">
+                    <img src="../Pics/login.png" alt="Image login">
                 </a>
                 </div>
                 <div class="shop">                  
                     <a href="#">
-                        <img src="Pics/market.png" id="openCartBtn" alt="image panier">
+                        <img src="../Pics/market.png" id="openCartBtn" alt="image panier">
                         <span id="cartItemCount">0</span>
                     </a>
                     <div class="go-to-cart">
-                        <a href="shop.html" id="goToCartBtn">Go to Cart</a>
+                        <a href="../HTML/shop.html" id="goToCartBtn">Go to Cart</a>
                     </div>
                     <div class="clear-cart">
                         <a href="#" id="clearCartBtn">Clear Cart</a>
@@ -50,7 +50,7 @@
                 </div>
             <aside id="searchbartop">
             <input type="checkbox" id="searchbartopbtn" />
-            <label for="searchbartopbtn"> <img src="Pics/loupe.png"></label>
+            <label for="searchbartopbtn"> <img src="../Pics/loupe.png"></label>
                 <form method="post" action="">
                 <div><input type="text" value="" /></div>
                  <button type="submit">OK</button>
@@ -82,130 +82,130 @@
             <a href="#" data-out="mouse" alt="#">
                 <div class="setup1">
                     <div class="setup1_pic">
-                        <img src="Pics/mouse1.jpeg" alt="setup-1">
+                        <img src="../Pics/mouse1.jpeg" alt="setup-1">
                     </div>
                     <div class="setup1_infos">
                         <h2>Razer Deathadder Essential </h2>
                         <p>6400 DPI Optical Sensor &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp; 5 Programmable Buttons</p>
                         <p>Price: €3.99 / Day 6400 DPI Optical Sensor</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="3.99">  
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="3.99">  
                     </div>
                 </div>
             </a>
             <a href="#" data-out="mouse" alt="#">
                 <div class="setup2">
                     <div class="setup2_pic">
-                        <img src="Pics/mouse2.jpeg" alt="setup-2">
+                        <img src="../Pics/mouse2.jpeg" alt="setup-2">
                     </div>
                     <div class="setup2_infos">
                         <h2>Logitech G203</h2>
                         <p>8000 DPI Tracking&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp;  6 Programmable Buttons</p>
                         <p>Price: €5.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="5.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="5.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="mouse" alt="#">
                 <div class="setup3">
                     <div class="setup3_pic">
-                        <img src="Pics/mouse3.jpeg" alt="setup-3">
+                        <img src="../Pics/mouse3.jpeg" alt="setup-3">
                     </div>
                     <div class="setup3_infos">
                         <h2>Logitech G502 HERO</h2>
                         <p>HERO 25600 DPI Sensor &emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp;  11 Programmable Buttons</p>
                         <p>Price: €3.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="3 .99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="3 .99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="mouse" alt="#">
                 <div class="setup4">
                     <div class="setup4_pic">
-                        <img src="Pics/mouse4.jpeg" alt="setup-4">
+                        <img src="../Pics/mouse4.jpeg" alt="setup-4">
                     </div>
                     <div class="setup4_infos">
                         <h2>Logitech Gpro</h2>
                         <p>HERO 25600 DPI Sensor &emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp;  4-8 Programmable Buttons</p>
                         <p>Price: €8.50 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="8.50"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="8.50"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="key" alt="#">
                 <div class="setup5">
                     <div class="setup5_pic">
-                        <img src="Pics/keyboard1.webp" alt="setup-5">
+                        <img src="../Pics/keyboard1.webp" alt="setup-5">
                     </div>
                     <div class="setup5_infos">
                         <h2>Razer Huntsman Mini 60%</h2>
                         <p>Optical-Mechanical Purple Switches &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp;  Detachable USB-C Cable</p>
                         <p>Price: €13.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="13.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="13.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="key" alt="#">
                 <div class="setup6">
                     <div class="setup6_pic">
-                        <img src="Pics/keyboard2.jpeg" alt="setup-6">
+                        <img src="../Pics/keyboard2.jpeg" alt="setup-6">
                     </div>
                     <div class="setup6_infos">
                         <h2>Corsair K55 RGB</h2>
                         <p>Membrane Gaming Keyboard &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp; &emsp;&emsp;&emsp;&emsp; &emsp; &emsp;      6 Macro Keys with Elgato Integration</p>
                         <p>Price: €6.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="6.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="6.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="key" alt="#">
                 <div class="setup7">
                     <div class="setup7_pic">
-                        <img src="Pics/keyboard3.jpeg" alt="setup-7">
+                        <img src="../Pics/keyboard3.jpeg" alt="setup-7">
                     </div>
                     <div class="setup7_infos">
                         <h2>Logitech G915 TKL </h2>
                         <p>Wireless Mechanical Gaming Keyboard Tactile Switches  &emsp; &emsp; 40+ hours battery life</p>
                         <p>Price: €14.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="14.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="14.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="head" alt="#">
                 <div class="setup8">
                     <div class="setup8_pic">
-                        <img src="Pics/headset1.jpeg" alt="setup-8">
+                        <img src="../Pics/headset1.jpeg" alt="setup-8">
                     </div>
                     <div class="setup8_infos">
                         <h2>Razer Kraken</h2>
                         <p>Wired &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; &emsp;     Unidirectional Microphone</p>
                         <p>Price: €4.50 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="4.50"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="4.50"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="head" alt="#">
                 <div class="setup9">
                     <div class="setup9_pic">
-                        <img src="Pics/headset2.jpeg" alt="setup-9">
+                        <img src="../Pics/headset2.jpeg" alt="setup-9">
                     </div>
                     <div class="setup9_infos">
                         <h2>Corsair VOID ELITE STEREO</h2>
                         <p>Wired &emsp;  &emsp; &emsp;  &emsp;  &emsp;&emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp; &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp;     PC, PS4, Xbox One, Switch and Mobile Compatibility</p>
                         <p>Price: €8.99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="8.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="8.99"> 
                     </div>
                 </div>
             </a>
             <a href="#" data-out="head" alt="#">
                 <div class="setup10">
                     <div class="setup10_pic">
-                        <img src="Pics/headset3.jpeg" alt="setup-10">
+                        <img src="../Pics/headset3.jpeg" alt="setup-10">
                     </div>
                     <div class="setup10_infos">
                         <h2>Corsair HS55 WIRELESS</h2>
                         <p>Wireless &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp; &emsp;  &emsp;  &emsp;  &emsp;  &emsp;  &emsp; &emsp;  &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp; &emsp;       Low-Latency 2.4Ghz</p>
                         <p>Price: €10,99 / Day</p>
-                        <img src="Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="10.99"> 
+                        <img src="../Pics/ajouter-au-panier.png" class="add-to-cart-btn" data-price="10.99"> 
                     </div>
                 </div>
             </a>
