--- a/V_2/HTML/index.html
+++ b/V_2/HTML/index.html
@@ -4,13 +4,13 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="../CSS/style.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Exo&family=Inter&family=Manrope&family=Montserrat&family=Oswald&family=Space+Grotesk&display=swap" rel="stylesheet">
     <title>RentPC-Home</title>
-    <script src="cart.js"></script>
-    <script src="common.js"></script>
+    <script src="../Java/cart.js"></script>
+    <script src="../Java/common.js"></script>
 </head>
 
 
@@ -18,30 +18,30 @@
     <header>
         <nav>
             <div class="logo">
-                <a href="index.html">
-                <img src="Pics/RENTPC.svg" alt="logo">
+                <a href="../HTML/index.html">
+                <img src="../Pics/RENTPC.svg" alt="logo">
                 </a>
             </div>
             <div id="pages_container">
-                <a href="Nos-setup.html">Our Setups</a>
-                <a href="Nos-PCs.html">Our PCs</a>
-                <a href="Our-monitors.html">Our monitors</a>
-                <a href="Our-inputs.html">Our Outputs/Inputs</a>
-                <a href="contact.html">Contact us</a>
+                <a href="../HTML/Nos-setup.html">Our Setups</a>
+                <a href="../HTML/Nos-PCs.html">Our PCs</a>
+                <a href="../HTML/Our-monitors.html">Our monitors</a>
+                <a href="../HTML/Our-inputs.html">Our Outputs/Inputs</a>
+                <a href="../HTML/contact.html">Contact us</a>
             </div>
             <div id="user_container">
                 <div class="login">
-                   <a href="register.html" alt="logo_login">
-                        <img src="Pics/login.png">
+                   <a href="../HTML/register.html" alt="logo_login">
+                        <img src="../Pics/login.png">
                    </a>
                 </div>
                 <div class="shop">                  
                     <a href="#">
-                        <img src="Pics/market.png" id="openCartBtn" alt="image panier">
+                        <img src="../Pics/market.png" id="openCartBtn" alt="image panier">
                         <span id="cartItemCount">0</span>
                     </a>
                     <div class="go-to-cart">
-                        <a href="shop.html" id="goToCartBtn">Go to Cart</a>
+                        <a href="../HTML/shop.html" id="goToCartBtn">Go to Cart</a>
                     </div>
                     <div class="clear-cart">
                         <a href="#" id="clearCartBtn">Clear Cart</a>
@@ -49,7 +49,7 @@
                 </div>
                 <aside id="searchbartop">
                 <input type="checkbox" id="searchbartopbtn" />
-                <label for="searchbartopbtn"> <img src="Pics/loupe.png"></label>
+                <label for="searchbartopbtn"> <img src="../Pics/loupe.png"></label>
                 <form method="post" action="">
                 <div><input type="text" value="" /></div>
                  <button type="submit">OK</button>
@@ -61,16 +61,16 @@
     <main>
         <section class="presentation">
             <div class="accueil-photos">
-                <a href="Nos-setup.html">
-                    <img src="Pics/setup.jpg" alt="Nos setups"> 
+                <a href="../HTML/Nos-setup.html">
+                    <img src="../Pics/setup.jpg" alt="Nos setups"> 
                     <h2>Our setups</h2>
                 </a>
-                <a href="Nos-PCs.html">
-                    <img src="Pics/PC.jpg" alt="Nos PC">
+                <a href="../HTML/Nos-PCs.html">
+                    <img src="../Pics/PC.jpg" alt="Nos PC">
                     <h2>Our PCs</h2> 
                 </a>
-                <a href="Our-monitors.html">
-                    <img src="Pics/ecran.jpg" alt="Nos écrans">
+                <a href="../HTML/Our-monitors.html">
+                    <img src="../Pics/ecran.jpg" alt="Nos écrans">
                     <h2>Our monitors</h2>
                 </a>
             </div>
@@ -78,11 +78,11 @@
         <section class="brands">
             <h2>Principals Brands :</h2>
             <div class="brands-photos">
-                <img src="Pics/msi.jpeg" alt="msi">
-                <img src="Pics/asus.jpeg" alt="asus">
-                <img src="Pics/amd.jpg" alt="amd">
-                <img src="Pics/corsair.jpeg" alt="corsair">
-                <img src="Pics/logitech.png" alt="logitech">
+                <img src="../Pics/msi.jpeg" alt="msi">
+                <img src="../Pics/asus.jpeg" alt="asus">
+                <img src="../Pics/amd.jpg" alt="amd">
+                <img src="../Pics/corsair.jpeg" alt="corsair">
+                <img src="../Pics/logitech.png" alt="logitech">
             </div>
         </section>
 
