--- a/V_2/HTML/Our-inputs.html
+++ b/V_2/HTML/Our-inputs.html
@@ -226,8 +226,8 @@
             <div class="footer-section">
                 <h2>Contact Us</h2>
                 <ul>
-                    <li>Adresse : 123 Rue PC, Ville</li>
-                    <li>Téléphone : (123) 456-7890</li>
+                    <li>Address : 93 Cr Charlemagne, 69002 Lyon, France</li>
+                    <li>Phone : +44 341 045 0354</li>
                     <li>Email : info@RentPC.com</li>
                 </ul>
             </div>
@@ -242,6 +242,26 @@
             </div>
             <div class="footer-section">
                 <h2>Follow Us</h2>
+                <div class="social-container">
+                  <div class="social-item">
+                    <img src="../Pics/instagram.png" alt="#" class="footer-image insta-image">
+                    <p class="text-right">Follow us on Instagram : RentPC</p>
+                  </div>
+                  <div class="social-item">
+                    <img src="../Pics/facebook.png" alt="#" class="footer-image facebook-image">
+                    <p class="text-right">Like us on Facebook : @RentPC</p>
+                  </div>
+                  <div class="social-item">
+                    <img src="../Pics/linkedin.png" alt="#" class="footer-image linkedin-image">
+                    <p class="text-right">Connect with us on LinkedIn : RentPC</p>
+                  </div>
+                </div>
+              </div>
+            <div class="footer-section delivery-section">
+                <img src="../Pics/delivery.png" alt="#" class="footer-image delivery-image">
+            </div>
+            <div class="footer-section">
+                <img src="../Pics/card.png" alt="#" class="footer-image card-image">
             </div>
         </div>
         <p>&copy; 2023 RentPC. All rights reserved.</p>
